Completed all types for the client.
